nav segunda parte

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-
+    
 }
 
 
@@ -13,34 +13,54 @@
     --third-color: #ECF0F3;
     --black: black;
     --white: white;
+    --bkg: radial-gradient(rgb(235, 235, 241) 80%, rgb(207, 205, 205))  no-repeat;
+    --btn-bkg: linear-gradient(45deg, rgb(255, 255, 255), rgb(216, 216, 216));
 
+    font-family: 'DM Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-.nav-container{
+body{
+    background: radial-gradient(rgb(235, 235, 241) 80%, rgb(207, 205, 205))  no-repeat;
+}
+
+.nav-container {
 
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    justify-content: space-between;
+    width: 100%;
+    gap: 25px;
     padding: 35px;
+    font-weight: 700;
+    align-items: center;
 }
 
-.nav-logo{
+.nav-logo {
     text-align: start;
-    font-size: large;
+    font-size: 25px;
+    font-weight: 700;
     color: var(--primary-color);
 }
 
-.nav-list{
+.nav-list {
     display: flex;
     flex-direction: row;
     list-style-type: none;
-    gap: 20px;
+    align-items: center;
+    gap: 30px;
     color: var(--primary-color);
-    
+
 }
 
-.nav-btn{
+.nav-btn {
     color: var(--second-color);
-    
-}
+    font-weight: 700;
+    width: 90px;
+    height: 35px;
+    background-color: var(--white);
+    border-radius: 4px;
+    background: var(--btn-bkg);
 
+}
