--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
     --third-color: #ECF0F3;
     --black: black;
     --white: white;
-    --bkg: radial-gradient(rgb(235, 235, 241) 80%, rgb(207, 205, 205)) no-repeat;
+    --bkg: linear-gradient(45deg, rgb(216, 216, 216), rgb(255, 255, 255),  rgb(255, 255, 255));
     --btn-bkg: linear-gradient(45deg, rgb(255, 255, 255), rgb(216, 216, 216));
     --btn-bkg-hover: linear-gradient(45deg, rgb(216, 216, 216), rgb(255, 255, 255));
     --shadow-box: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -21,10 +21,16 @@
     font-family: 'DM Sans', sans-serif;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Roboto', sans-serif;
+
+    /*radial-gradient(rgb(235, 235, 241) 80%, rgb(207, 205, 205)) no-repeat*/
 }
 
 body {
     background: radial-gradient(rgb(235, 235, 241) 80%, rgb(207, 205, 205)) no-repeat;
+}
+
+h2{
+    font-size: xx-large;
 }
 
 
@@ -163,6 +169,70 @@ main article p {
     border: solid black;
 }
 
+/*Features*/
+
+.title-and-sub span {
+    font-size: smaller;
+    color: var(--second-color);
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+h2 {
+    margin-top: 10px;
+}
+
+.features{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    width: 60%;
+    margin: auto;
+    margin-top: 80px;
+}
+
+
+.features-boxes {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+    width: 100%;
+    margin: auto;
+}
+
+.features-boxes .box {
+    width: 230px;
+    height: 190px;
+    background: var(--bkg);
+    box-shadow: var(--shadow-box);
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+    align-items: center;
+    text-align: left;
+}
+
+.features-boxes .box div img{
+    height: 15px;
+    margin-top: 18px;
+    color: var(--second-color);
+    position: relative;
+    left: 10px;
+}
+
+.features-boxes .box h4{
+    margin-top: 15px;
+}
+
+.features-boxes .box p{
+    margin-top: 15px;
+    font-size: smaller;
+}
+
+
+
+
 
 /*section portfolio*/
 
@@ -171,20 +241,10 @@ main article p {
     flex-direction: column;
     width: 80%;
     padding: 40px;
-    margin: auto;
+    margin: 0 auto;
+    margin-top: 80px;
     text-align: center;
 
-}
-
-.portfolio-text span {
-    font-size: smaller;
-    color: var(--second-color);
-    font-weight: 600;
-    margin-top: 30px;
-}
-
-h2 {
-    margin-top: 10px;
 }
 
 .portfolio-boxes {
@@ -200,6 +260,7 @@ h2 {
     width: 210px;
     height: 225px;
     background: var(--bkg);
+    box-shadow: var(--shadow-box);
     padding: 10px;
     border-radius: 10px;
     margin-top: 20px;
@@ -243,7 +304,9 @@ h2 {
     width: 65%;
     border-radius: 15px;
     padding: 20px;
+    text-align: center;
     margin: auto;
+    margin-top: 80px;
 }
 
 .container-resume-text {
@@ -252,12 +315,6 @@ h2 {
     text-align: center;
 }
 
-.container-resume-text span {
-    font-size: smaller;
-    color: var(--second-color);
-    font-weight: 600;
-    margin-top: 30px;
-}
 
 .nav-resume {
     display: flex;
@@ -268,44 +325,56 @@ h2 {
     margin-top: 30px;
     background: var(--bkg);
     justify-content: space-between;
-    width: 750px;
+    width: 100%;
     height: 50px;
     align-items: center;
     padding: 20px;
     font-size: medium;
-    border-radius: 15px;
+    border-radius: 4px;
     font-weight: 450;
+    box-shadow: var(--shadow-box);
 
 }
 
 .resume-li:hover {
     color: var(--second-color);
     background-color: var(--white);
+    padding: 16px ;
     border-radius: 4px;
     background: var(--btn-bkg);
     cursor: pointer;
-    box-shadow: var(--shadow-box), 0 -4px -8px rgb(255, 255, 255);
+    box-shadow: var(--shadow-box);
 
+}
+
+.title-and-sub-sub span {
+    font-size: smaller;
+    color: var(--second-color);
+    font-weight: 600;
+    margin-top: 30px;
 }
 
 .container-articles{
     display: flex;
     flex-direction: row;
     padding: 15px;
+    text-align: left;
     
 }
 
 .container-articles .article{
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .article .card-texts {
-    width: 44%;
+    width: 92%;
     background: var(--bkg);
     border-radius: 7px;
     padding: 25px;
     margin: 20px;
+    box-shadow: var(--shadow-box);
 }
 
 
@@ -314,6 +383,7 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -321,6 +391,7 @@ h2 {
 .squad-details {
     color: var(--second-color);
     background: var(--bkg);
+    box-shadow: var(--shadow-box);
     padding: 5px;
     border-radius: 15px;
 }
@@ -331,16 +402,19 @@ h2 {
 /*Form*/
 
 .contact-container {
-    width: 70%;
     display: flex;
     flex-direction: column;
-    padding: 30px 60px;
+    width: 90%;
+    padding: 30px 30px;
+    margin: auto;
+    margin-top: 80px;
+    text-align: center;
 }
 
 .container-under-titles {
     display: flex;
     flex-direction: row;
-    width: 80%;
+    width: 90%;
     justify-content: center;
     gap: 20px;
     margin: 30px 50px;
@@ -360,48 +434,87 @@ h2 {
     color: var(--second-color);
     font-weight: 600;
     margin-top: 30px;
-
-
-
 }
 
 .contact-card {
-    width: 40%;
+    display: flex;
+    flex-direction: column;
+    width: 45%;
     background: var(--bkg);
+    box-shadow: var(--shadow-box);
     text-align: center;
-    padding: 15px;
+    padding: 20px;
     border-radius: 10px;
     height: 500px;
-
+    justify-content: space-between;
 }
 
 .contact-card div img {
-    width: 250px;
-
+    width: 200px;
+    box-shadow: var(--shadow-box);
 }
 
 .logos-contact {
     display: flex;
     flex-direction: row;
-
 }
 
 .logos-img img {
     width: 25px;
-
 }
 
 /*form right side*/
 
 .form {
-    display: flex;
-    flex-direction: column;
     background: var(--bkg);
-    width: 60%;
+    box-shadow: var(--shadow-box);
+    width: 100%;
     flex-wrap: wrap;
     text-align: center;
     padding: 15px;
     border-radius: 10px;
     height: 500px;
-
+    font-size: small;
+    text-align: left;
 }
+
+.form-fist-line {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.input-first-line{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.form input {
+    width: 100%;
+    margin: 4px;
+}
+
+.send-btn {
+    width: 100%;
+    background-color: var(--second-color);
+    border-radius: 4px;
+    border: none;
+    color: var(--third-color);
+    padding: 5px;
+    
+}
+
+.send-btn:hover {
+    cursor: pointer;
+    filter: brightness(0.8);  
+}
+
+
+.input-comments {
+    padding: 40px;
+    margin: 10px;
+    border-radius: 4px;
+    border: solid grey 0.2px;
+}
+
