empezando medias queries

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,32 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 
+
+}
+
+@media screen and (max-width: 768px) {
+    /*main*/
+    .profile-photo img{
+        max-width: 200px;
+    }
+
+    .artl-side-down{
+        gap: 50px;
+    }
+
+    /*features*/
+
+    .features-boxes{
+
+    }
+
+    /*My Resume*/
+
+    .container-resume{
+        width: 100%;
+
+        
+    }
 }
 
 
@@ -13,10 +39,13 @@
     --third-color: #ECF0F3;
     --black: black;
     --white: white;
-    --bkg: linear-gradient(45deg, rgb(216, 216, 216), rgb(255, 255, 255),  rgb(255, 255, 255));
+    /*--bkg: linear-gradient(45deg, rgb(216, 216, 216), rgb(255, 255, 255), rgb(255, 255, 255));*/
     --btn-bkg: linear-gradient(45deg, rgb(255, 255, 255), rgb(216, 216, 216));
-    --btn-bkg-hover: linear-gradient(45deg, rgb(216, 216, 216), rgb(255, 255, 255));
-    --shadow-box: 0 4px 8px rgba(0, 0, 0, 0.1);
+    --btn-bkg-hover: linear-gradient(45deg, rgb(205, 219, 241), rgb(255, 255, 255));
+    /*--shadow-box: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+
+    --bkg: linear-gradient(135deg, rgba(233, 233, 233, 1) 35%, rgba(255, 255, 255, 1) 100%);
+    --shadow-box: 7px 7px 30px -16px rgba(0, 0, 0, 0.75), -10px -10px 30px 1px rgba(255, 255, 255, 1);
 
     font-family: 'DM Sans', sans-serif;
     font-family: 'Montserrat', sans-serif;
@@ -26,11 +55,22 @@
 }
 
 body {
-    background: radial-gradient(rgb(235, 235, 241) 80%, rgb(207, 205, 205)) no-repeat;
+    background: var(--bkg) no-repeat;
 }
 
-h2{
+h2 {
     font-size: xx-large;
+}
+
+.title-and-sub span {
+    font-size: smaller;
+    color: var(--second-color);
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.title-and-sub h2 {
+    margin-top: 10px;
 }
 
 
@@ -91,6 +131,7 @@ h2{
 .nav-btn:hover {
     background: var(--btn-bkg-hover);
 }
+
 
 
 
@@ -171,18 +212,22 @@ main article p {
 
 /*Features*/
 
-.title-and-sub span {
+.title-and-sub-left span {
     font-size: smaller;
     color: var(--second-color);
     font-weight: 600;
     margin-top: 20px;
+    position: relative;
+    left: 25px;
 }
 
-h2 {
+.title-and-sub-left h2 {
     margin-top: 10px;
+    position: relative;
+    left: 25px;
 }
 
-.features{
+.features {
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -196,24 +241,25 @@ h2 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 30px;
     width: 100%;
-    margin: auto;
+    margin-top: 20px;
 }
 
 .features-boxes .box {
-    width: 230px;
-    height: 190px;
+    width: 260px;
+    height: 210px;
     background: var(--bkg);
     box-shadow: var(--shadow-box);
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 8px;
     margin-top: 20px;
     align-items: center;
     text-align: left;
 }
 
-.features-boxes .box div img{
+.features-boxes .box div img {
     height: 15px;
     margin-top: 18px;
     color: var(--second-color);
@@ -221,11 +267,11 @@ h2 {
     left: 10px;
 }
 
-.features-boxes .box h4{
+.features-boxes .box h4 {
     margin-top: 15px;
 }
 
-.features-boxes .box p{
+.features-boxes .box p {
     margin-top: 15px;
     font-size: smaller;
 }
@@ -234,7 +280,7 @@ h2 {
 
 
 
-/*section portfolio*/
+/*My Portfolio*/
 
 .portfolio {
     display: flex;
@@ -251,6 +297,7 @@ h2 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 30px;
     width: 80%;
     margin: auto;
@@ -298,7 +345,7 @@ h2 {
 
 /* My Resume*/
 
- .container-resume {
+.container-resume {
     display: flex;
     flex-direction: column;
     width: 65%;
@@ -339,7 +386,7 @@ h2 {
 .resume-li:hover {
     color: var(--second-color);
     background-color: var(--white);
-    padding: 16px ;
+    padding: 16px;
     border-radius: 4px;
     background: var(--btn-bkg);
     cursor: pointer;
@@ -354,15 +401,15 @@ h2 {
     margin-top: 30px;
 }
 
-.container-articles{
+.container-articles {
     display: flex;
     flex-direction: row;
     padding: 15px;
     text-align: left;
-    
+
 }
 
-.container-articles .article{
+.container-articles .article {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -370,6 +417,7 @@ h2 {
 
 .article .card-texts {
     width: 92%;
+    height: 200px;
     background: var(--bkg);
     border-radius: 7px;
     padding: 25px;
@@ -379,7 +427,7 @@ h2 {
 
 
 
-.subtitles-card{
+.subtitles-card {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -425,8 +473,6 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-
 }
 
 .title-form {
@@ -465,9 +511,10 @@ h2 {
     margin: 15px;
     line-height: 25px;
     font-size: 14px;
+    color: var(--primary-color);
 }
 
-.find-me{
+.find-me {
     text-align: left;
     margin-top: 15px;
 }
@@ -499,6 +546,12 @@ h2 {
     height: 500px;
     font-size: small;
     text-align: left;
+    line-height: 25px;
+    color: var(--primary-color);
+}
+
+form div {
+    margin-top: 10px;
 }
 
 .form-fist-line {
@@ -507,15 +560,18 @@ h2 {
     justify-content: space-between;
 }
 
-.input-first-line{
+.input-first-line {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.form input {
+.form .white-space {
     width: 100%;
     margin: 4px;
+    padding: 6px;
+    border-radius: 4px;
+    border: solid grey 0.2px;
 }
 
 .send-btn {
@@ -524,20 +580,39 @@ h2 {
     border-radius: 4px;
     border: none;
     color: var(--third-color);
-    padding: 5px;
-    
+    padding: 8px;
+
 }
 
 .send-btn:hover {
     cursor: pointer;
-    filter: brightness(0.8);  
+    filter: brightness(0.8);
 }
 
 
 .input-comments {
-    padding: 40px;
-    margin: 10px;
+    width: 100%;
+    padding: 60px;
+    margin: 4px;
     border-radius: 4px;
     border: solid grey 0.2px;
 }
 
+/*Footer*/
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 50px;
+}
+
+footer img {
+    width: 80px;
+    margin-bottom: 15px;
+}
+
+.foot-up {
+    font-weight: 800;
+}
